# BatchRank

./: README.md  pyproject.toml
src/BatchRank/: __init__.py  main.py
