[project]
name = "BatchRank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthias Bruhns", email = "matthias.bruhns@uni-tuebingen.de" },
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[project.scripts]
BatchRank = "BatchRank:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
