[project]
name = "BatchRank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matthias Bruhns", email = "matthias.bruhns@uni-tuebingen.de" },
]
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.11.3",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "scanpy>=1.10.4",
    "scikit-learn>=1.6.1",
]

[project.scripts]
BatchRank = "BatchRank:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
